:bug: updated counter to unique visitors only

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
           <img alt="badge: proud member of the 250KB Club" src="https://250kb.club/color_badge_dark.png">
         </a></div>
         <div><a href="https://www.cutercounter.com/" target="_blank">
-          <img src="https://www.cutercounter.com/hits.php?id=hmxdokif&amp;nd=1&amp;style=1" border="0" alt="visitor counter">
+          <img src="https://www.cutercounter.com/hits.php?id=hexpdofn&amp;nd=1&amp;style=1" border="0" alt="visitor counter">
         </a></div>
   </p>
 </div>
